src/homework/14-kubernetes-security/14.5/config/example-security-context.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: security-context-demo
spec:
  containers:
    - name: sec-ctx-demo
      image: fedora:latest
      command: [ "id" ]
      # command: [ "sh", "-c", "sleep 1h" ]
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
