src/homework/14-kubernetes-security/14.5/config/restricted-pods.yml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: test
    role: outer
  name: test-pod-outer
spec:
  containers:
    - image: praqma/network-multitool:alpine-extra
      imagePullPolicy: IfNotPresent
      name: test-container
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: test
    role: inner
  name: test-pod-inner
spec:
  containers:
    - image: praqma/network-multitool:alpine-extra
      imagePullPolicy: IfNotPresent
      name: test-container
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy-inner
spec:
  podSelector:
    matchLabels:
      role: inner
  policyTypes:
    - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: test
            role: outer
      ports:
        - port: 80
        - port: 443
